--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,75 +1,79 @@
 template(name='nav')
-    .ui.borderless.attached.massive.menu.topnav
-        //- a.toggle_sidebar.icon.item.sidebar_on
-        //-     i.large.sidebar.icon
-        if is_loading
-            .icon.item
-                i.large.grey.loading.notched.circle.icon
-        else
-            //- if is_dev
-            //-     a.header.icon.item(href='/' class="{{isActivePath '/'}}" title='home')
-            //-         //- i.grey.home.large.icon
-            //-         +i name='home-page'    
-            if is_staff
-                //- a.icon.item(href='/staff' class="{{isActivePath '/staff'}}" title='staff')
-                //-     //- i.grey.user.shield.large.icon
-                //-     +i name='employee-card'
-                a.icon.item(href='/users' class="{{isActivePath '/users'}}" title='Users')
-                    //- i.large.grey.users.icon
-                    +i name='groups'
-                    .mobile.hidden Users
-            //- a.item.set_marketplace(href='/m/marketplace' class="{{isActivePath '/m/marketplace'}}")
-            //-     +i name='shop'
-            //- a.item.set_post(href='/m/post' class="{{isActivePath '/m/post'}}")
-            //-     +i name='blog'
-            //- each bookmarked_models
-            //-     a.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}" title=title)
-            //-         i.large.icon(class=icon)
-            //-         |#{title}
-            //- if is_frontdesk
-            a.icon.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
-                //- i.large.grey.clinic.medical.icon
-                +i name='treadmill'    
-                .mobile.hidden Health Club
-        .right.menu
-            if currentUser
-                //- .item
-                //-     .ui.header(title='your karma') #{currentUser.karma}
-                unless logging_out
-                    //- .ui.simple.dropdown.item(href="/user/#{currentUser.username}/notifications" class="{{isActivePath '/messages'}}")
-                    //-     i.alarm.icon
-                    //-     .menu
-                    //-         each notifications
-                    //-             .ui.circular.button #{text}
-                    //- if is_admin
-                    //-     a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
-                    //-         +i name='new-post'
-                            //- i.large.grey.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
-                    //- if is_staff
-                    //-     a.icon.item(href="/chat" class="{{isActivePath '/chat'}}")
-                    //-         +i name='filled-topic'
-                    //- if is_admin
-                    //-     a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
-                    //-         +i name='user shield'
-                    if is_dev
-                        a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
-                            +i name='active directory'
-                    unless is_frontdesk
-                        a.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_chat'}}")
-                            if currentUser.image_id
-                                img.ui.avatar.image(src="{{c.url currentUser.image_id width=100 height=100 gravity='face' crop='fill'}}")
-                            else
-                                +i name='user'
-                            //- | #{currentUser.username}
-                if logging_out
-                    .item
-                        i.large.grey.loading.circle.notch.icon
-                else
-                    a#logout.ui.mobile.hidden.icon.item(href='#' title='Log Out')
-                        i.sign.out.grey.icon
+    unless is_frontdesk
+        .ui.borderless.attached.massive.menu.topnav
+            //- a.toggle_sidebar.icon.item.sidebar_on
+            //-     i.large.sidebar.icon
+            if is_loading
+                .icon.item
+                    i.large.grey.loading.notched.circle.icon
             else
-                a.icon.item(href='/login' title='Login') 
-                    i.sign.in.large.grey.icon
+                unless is_frontdesk
+                    a.header.icon.set_model.item(href='/' class="{{isActivePath '/'}}")
+                        //- i.grey.home.large.icon
+                        +i name='home-page'    
+                if is_staff
+                    a.icon.item(href='/staff' class="{{isActivePath '/staff'}}" title='staff')
+                        +i name='employee-card'
+                        .mobile.hidden staff
+                if is_staff
+                    a.icon.item(href='/users' class="{{isActivePath '/users'}}" title='Users')
+                        //- i.large.grey.users.icon
+                        +i name='groups'
+                        .mobile.hidden users
+                //- a.item.set_marketplace(href='/m/marketplace' class="{{isActivePath '/m/marketplace'}}")
+                //-     +i name='shop'
+                //- each bookmarked_models
+                //-     a.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}" title=title)
+                //-         i.large.icon(class=icon)
+                //-         |#{title}
+                //- if is_frontdesk
+                a.icon.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
+                    //- i.large.grey.clinic.medical.icon
+                    +i name='treadmill'    
+                    .mobile.hidden health club
+            .right.menu
+                if currentUser
+                    a.item.set_task(href='/m/task' class="{{isActivePath '/m/task'}}")
+                        +i name='task'
+                    a.item.set_note(href='/m/note' class="{{isActivePath '/m/note'}}")
+                        +i name='note'
+                    //- .item
+                    //-     .ui.header(title='your karma') #{currentUser.karma}
+                    unless logging_out
+                        //- .ui.simple.dropdown.item(href="/user/#{currentUser.username}/notifications" class="{{isActivePath '/messages'}}")
+                        //-     i.alarm.icon
+                        //-     .menu
+                        //-         each notifications
+                        //-             .ui.circular.button #{text}
+                        //- if is_admin
+                        //-     a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
+                        //-         +i name='new-post'
+                                //- i.large.grey.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
+                        //- if is_staff
+                        //-     a.icon.item(href="/chat" class="{{isActivePath '/chat'}}")
+                        //-         +i name='filled-topic'
+                        //- if is_admin
+                        //-     a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
+                        //-         +i name='user shield'
+                        if is_dev
+                            a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
+                                +i name='active directory'
+                        unless is_frontdesk
+                            a.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_chat'}}")
+                                if currentUser.image_id
+                                    img.ui.avatar.image(src="{{c.url currentUser.image_id width=100 height=100 gravity='face' crop='fill'}}")
+                                else
+                                    +i name='user'
+                                //- | #{currentUser.username}
+                    if logging_out
+                        .item
+                            i.large.grey.loading.circle.notch.icon
+                    else
+                        a#logout.ui.mobile.hidden.icon.item(href='#' title='Log Out')
+                            i.sign.out.grey.icon
+                else
+                    a.icon.item(href='/login' title='Login') 
+                        i.sign.in.large.grey.icon
 
 
 template(name='sidebar')
@@ -142,6 +146,7 @@ template(name='footer')
     .ui.fluid.secondary.attached.segment.footer
         .ui.container.stackable.grid
             .eight.wide.column
+                +ads
                 //- form(action='https://www.paypal.com/cgi-bin/webscr', method='post', target='_top')
                 //-     input(type='hidden', name='cmd', value='_s-xclick')
                 //-     input(type='hidden', name='hosted_button_id', value='AUVHGYNUW5LVE')
@@ -162,6 +167,6 @@ template(name='footer')
                     with currentUser
                         +role_switcher
         .row
-            .ui.center.aligned.header
-                i.creative.commons.icon
-                |Gold Run
+            .ui.center.aligned.grey.header
+                i.copyright.outline.icon
+                |gold run online
