--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -3,9 +3,10 @@ template(name='login')
         .centered.row
             .ten.wide.column
                 .ui.center.aligned.basic.segment
-                    i.massive.icons
-                        i.home.grey.icon
-                        i.corner.right.chevron.icon
+                    .ui.header gold run online login
+                    //- i.massive.icons
+                    //-     i.home.grey.icon
+                    //-     i.corner.right.chevron.icon
                 if message
                     h4.ui.center.aligned.header #{message}
                 .ui.fluid.input(class=login_class)
@@ -20,7 +21,7 @@ template(name='login')
                     input.password(type='password')
                 //- if username
                 if logging_in
-                    .ui.fluid.large.circular.button.enter(title="Login #{username}" class=enter_class)
+                    .ui.fluid.large.circular.basic.button.enter(title="Login #{username}" class=enter_class)
                         |login #{username}
                         i.right.chevron.icon
                 else
@@ -31,9 +32,9 @@ template(name='login')
                                 i.user.plus.icon
                                 |register
                 .ui.center.aligned.basic.segment    
-                    a.ui.circular.large.button(href='/forgot_password')
+                    a.ui.circular.large.basic.button(href='/forgot_password')
                         i.refresh.icon
                         |forgot password
-                    a.ui.circular.large.button(href='/register') 
+                    a.ui.circular.large.basic.button(href='/register') 
                         i.user.plus.icon
                         |register
