--- a/client/fields.jade
+++ b/client/fields.jade
@@ -899,6 +899,50 @@ template(name='multi_user_edit')
                 //-                 |#{first_name} #{last_name}
                 //-                 small @#{username}
 
+
+template(name='multi_doc_input')
+    .ui.form
+        .ui.small.inline.grey.header
+            if icon
+                i.grey.icon(class=icon)
+            if title
+                |#{title}
+            else if label
+                |#{label}
+            else if key
+                |#{key}
+            else
+                |#{this}
+            input#multi_doc_select_input(type='text' placeholder="lookup #{ref_model}..." autocomplete="off")
+            each selections
+                .ui.large.label
+                    |#{first_name} #{last_name}
+        if doc_results
+            .ui.top.attached.segment
+                .ui.middle.aligned.selection.animated.list
+                    each doc_results
+                        .select_doc.item
+                            h4.ui.header
+                                //- img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+                                strong #{first_name} #{last_name}
+        //- +clear_value                
+        //- .ui.list
+        //-     each field_value
+        //-         // |#{this}
+        //-         +user_card
+        //-         .ui.large.button
+        //-             |#{first_name} #{last_name}
+                //- with user_from_id
+                //-     .item
+                //-         .right.floated.content
+                //-             i.pull_user.remove.link.icon
+                //-         .image
+                //-             img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+                //-         .content
+                //-             h4.ui.header
+                //-                 |#{first_name} #{last_name}
+                //-                 small @#{username}
+
 template(name='multi_user_view')
     .ui.small.header 
         |#{title}
