--- a/client/nav.jade
+++ b/client/nav.jade
@@ -146,7 +146,8 @@ template(name='footer')
     .ui.fluid.secondary.attached.segment.footer
         .ui.container.stackable.grid
             .eight.wide.column
-                +ads
+                if is_resident
+                    +ads
                 //- form(action='https://www.paypal.com/cgi-bin/webscr', method='post', target='_top')
                 //-     input(type='hidden', name='cmd', value='_s-xclick')
                 //-     input(type='hidden', name='hosted_button_id', value='AUVHGYNUW5LVE')
